<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FittsTilt</string>
    <string name="setup_title">Setup</string>
    <string name="setup_subtitle">(Fitts Flicker)</string>
    <string name="button01text">OK</string>
    <string name="button02text">Save</string>
    <string name="button03text">Exit</string>
    <string name="paramlabelparttext">Participant code</string>
    <string name="paramlabelsesstext">Session code</string>
    <string name="paramlabelblocktext">Block code</string>
    <string name="paramlabelgrouptext">Group code</string>
    <string name="paramlabelconditiontext">Condition code</string>
    <string name="paramlabeltargetstext">Number of targets</string>
    <string name="paramlabelamplitudetext">Target amplitude (A)</string>
    <string name="paramlabelwidthtext">Target width (W)</string>
    <string name="paramlabelballscale">Ball scale</string>
    <string name="paramlabelorderofcontroltext">Order of control</string>
    <string name="paramfrictioncoefficient">Friction Coefficient</string>

    <!-- Amit changes -->
    <string name="paramfrictioncoefficientvisualizationMatching">Visualization Matching</string>

    <string name="paramfrictioncoefficientvisualization">Visualization</string>
    <!-- Amit ends -->


    <string name="paramlabeltiltgaintext">Tilt gain</string>
    <string name="paramlabelselectionmodetext">Selection mode</string>
    <string name="paramvibrotactilefeedbacktext">Vibrotactile feedback</string>
    <string name="paramauditoryfeedbacktext">Auditory feedback</string>
    <string name="paramflickvalue">Flicker Multiplier</string>
    <string name="paramStartRaduis">Start Raduis for Flicker</string>
    <string name="paramHandVal">What\'s your main hand?</string>
    <string name="mode_of_interaction">Mode of Interaction</string>
</resources>