<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ff123456"
            android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center_horizontal"
                  android:background="#ff234567"
                  android:gravity="center_horizontal"
                  android:orientation="vertical">

        <!-- Title and Subtitle -->

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center_horizontal"
                      android:gravity="center_horizontal"
                      android:orientation="vertical">
            <TextView
                android:id="@+id/setupTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="0dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:text="@string/setup_title"
                android:textAppearance="?android:attr/textAppearanceLarge"/>
            <TextView
                android:id="@+id/setupSubTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="0dp"
                android:text="@string/setup_subtitle"
                android:textAppearance="?android:attr/textAppearanceSmall"/>
        </LinearLayout>

        <TableLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="20dp" >

            <TableRow>

                <Button
                    android:id="@+id/Button01"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3"
                    android:onClick="clickOK"
                    android:text="@string/button01text"
                    android:textAppearance="?android:attr/textAppearanceMedium" >
                </Button>

                <Button
                    android:id="@+id/Button02"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3"
                    android:onClick="clickSave"
                    android:text="@string/button02text"
                    android:textAppearance="?android:attr/textAppearanceMedium" >
                </Button>

                <Button
                    android:id="@+id/Button03"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3"
                    android:onClick="clickExit"
                    android:text="@string/button03text"
                    android:textAppearance="?android:attr/textAppearanceMedium" >
                </Button>
            </TableRow>
        </TableLayout>

        <TableLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <TableRow>

                <TextView
                    android:id="@+id/paramLabelPart"
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/paramlabelparttext"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/paramPart"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:singleLine="true" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/paramLabelSess"
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/paramlabelsesstext"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/paramSess"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/paramLabelBlock"
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/paramlabelblocktext"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/paramBlock"
                    android:layout_weight="1"
                    android:gravity="left" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/paramLabelGroup"
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/paramlabelgrouptext"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/paramGroup"
                    android:layout_weight="1"
                    android:gravity="left" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/paramLabelCondition"
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/paramlabelconditiontext"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/paramCondition"
                    android:layout_weight="1"
                    android:gravity="left" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/paramLabelTargets"
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/paramlabeltargetstext"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/paramTargets"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/paramLabelAmplitude"
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/paramlabelamplitudetext"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/paramAmplitude"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/paramLabelWidth"
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/paramlabelwidthtext"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/paramWidth"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/paramlabelBallScale"
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/paramlabelballscale"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/paramBallScale"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/paramLabelOrderOfControl"
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/paramlabelorderofcontroltext"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/paramOrderOfControl"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/paramLabelFlickerMuliplier"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:paddingTop="10dp"
                    android:paddingRight="5dp"
                    android:text="@string/paramflickvalue"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/paramFlicketMultiplier"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/paramLabelFrictionCoefficient"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:paddingTop="10dp"
                    android:paddingRight="5dp"
                    android:text="@string/paramfrictioncoefficient"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/paramFrictionCoefficient"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <!-- Amit changes -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/paramLabelFrictionCoefficientVisualuzationMatching"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:paddingTop="10dp"
                    android:paddingRight="5dp"
                    android:text="@string/paramfrictioncoefficientvisualizationMatching"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/paramFrictionCoefficientVisualuzationMatching"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <!-- Amit changes -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/paramLabelFrictionCoefficientVisualuzation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:paddingTop="10dp"
                    android:paddingRight="5dp"
                    android:text="@string/paramfrictioncoefficientvisualization"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/paramFrictionCoefficientVisualuzation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/paramStartRaduis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:paddingTop="10dp"
                    android:paddingRight="5dp"
                    android:text="@string/paramStartRaduis"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/paramRaduis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/paramHandlabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:paddingTop="10dp"
                    android:paddingRight="5dp"
                    android:text="@string/paramHandVal"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/paramHand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/paramLabelTiltGain"
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/paramlabeltiltgaintext"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/paramTG"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/paramLabelSelectionMode"
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/paramlabelselectionmodetext"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/paramSelectionMode"
                    android:layout_weight="1"
                    android:gravity="left" />
            </TableRow>

            <CheckBox
                android:id="@+id/paramVibrotactileFeedback"
                android:text="@string/paramvibrotactilefeedbacktext"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <CheckBox
                android:id="@+id/paramAuditoryFeedback"
                android:text="@string/paramauditoryfeedbacktext"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TableRow>
            </TableRow>

            <TableRow>
            </TableRow>
        </TableLayout>
    </LinearLayout>

</ScrollView>